# prost-canonical-serde

./: .gitignore  CONFORMANCE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
prost-canonical-serde/: Cargo.toml  README.md
prost-canonical-serde-build/: Cargo.toml  README.md
prost-canonical-serde-build/src/: lib.rs
prost-canonical-serde-conformance/: Cargo.toml  build.rs
prost-canonical-serde-conformance/conformance/: failure_list_rust_cc.txt
prost-canonical-serde-conformance/src/: main.rs
prost-canonical-serde-derive/: Cargo.toml  README.md
prost-canonical-serde-derive/src/: lib.rs
prost-canonical-serde-example/: Cargo.toml  build.rs
prost-canonical-serde-example/docs/: usage.rs
prost-canonical-serde-example/src/: kitchen_sink.rs  lib.rs
prost-canonical-serde/docs/: usage.rs
prost-canonical-serde/docs/proto/: example.proto  kitchen_sink.proto
prost-canonical-serde/example/: Cargo.toml  build.rs
prost-canonical-serde/example/docs/: usage.rs
prost-canonical-serde/example/proto/: example.proto  kitchen_sink.proto
prost-canonical-serde/example/src/: demo.rs
prost-canonical-serde/src/: lib.rs
prost-canonical-serde/src/canonical/: enums.rs  error.rs  map.rs  mod.rs  number.rs  scalar.rs  wkt.rs  wrappers.rs
prost-canonical-serde/tests/: example_roundtrip.rs
