[workspace]
members = [
    "prost-canonical-serde",
    "prost-canonical-serde-build",
    "prost-canonical-serde-conformance",
    "prost-canonical-serde-derive",
    "prost-canonical-serde-example",
]
resolver = "3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
